--- a/css/src/_fonts.scss
+++ b/css/src/_fonts.scss
@@ -2,8 +2,10 @@
 // Google Webfonts
 @import url(//fonts.googleapis.com/css?family=Open+Sans:300italic,600italic,800italic,300,600,800);
 
+
 // FontAwesome
 @import "fontawesome";
+
 
 @font-face {
     font-family: 'FontAwesome';
@@ -15,52 +17,6 @@
     font-weight: normal;
     font-style: normal;
 }
-
-
-@font-face {
-    font-family: 'Texgyre Adventor Regular';
-    src: url('fonts/texgyreadventor-regular.eot');
-    src: url('fonts/texgyreadventor-regular.eot?#iefix') format('embedded-opentype'),
-         url('fonts/texgyreadventor-regular.woff') format('woff'),
-         url('fonts/texgyreadventor-regular.ttf') format('truetype'),
-         url('fonts/texgyreadventor-regular.svg#texgyreadventorregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Texgyre Adventor Italic';
-    src: url('fonts/texgyreadventor-italic.eot');
-    src: url('fonts/texgyreadventor-italic.eot?#iefix') format('embedded-opentype'),
-         url('fonts/texgyreadventor-italic.woff') format('woff'),
-         url('fonts/texgyreadventor-italic.ttf') format('truetype'),
-         url('fonts/texgyreadventor-italic.svg#texgyreadventoritalic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Texgyre Adventor Bold Italic';
-    src: url('fonts/texgyreadventor-bolditalic.eot');
-    src: url('fonts/texgyreadventor-bolditalic.eot?#iefix') format('embedded-opentype'),
-         url('fonts/texgyreadventor-bolditalic.woff') format('woff'),
-         url('fonts/texgyreadventor-bolditalic.ttf') format('truetype'),
-         url('fonts/texgyreadventor-bolditalic.svg#texgyreadventorbold_italic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Texgyre Adventor Bold';
-    src: url('fonts/texgyreadventor-bold.eot');
-    src: url('fonts/texgyreadventor-bold.eot?#iefix') format('embedded-opentype'),
-         url('fonts/texgyreadventor-bold.woff') format('woff'),
-         url('fonts/texgyreadventor-bold.ttf') format('truetype'),
-         url('fonts/texgyreadventor-bold.svg#texgyreadventorbold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
 
 
 @mixin font {
@@ -79,7 +35,7 @@
 }
 
 @mixin font-title {
-    font-family: "Texgyre Adventor Regular", sans-serif;
+    font-family: Texta, "Open Sans", Arial, san-serif;
 }
 
 @mixin font-awesome {
@@ -87,13 +43,17 @@
 }
 
 @mixin font-title-bold {
-	font-family: "Texgyre Adventor Bold", sans-serif;
+	font-family: Texta, "Open Sans", Arial, san-serif;
+    font-weight: bold;
 }
 
 @mixin font-title-italic {
-	font-family: "Texgyre Adventor Italic", sans-serif;
+    font-family: Texta, "Open Sans", Arial, san-serif;
+    font-style: italic;
 }
 
 @mixin font-title-bold-italic {
-	font-family: "Texgyre Adventor Bold Italic", sans-serif;
+    font-family: Texta, "Open Sans", Arial, san-serif;
+    font-weight: bold;
+    font-style: italic;
 }
