--- a/css/src/_showcase.scss
+++ b/css/src/_showcase.scss
@@ -43,37 +43,95 @@
 		
 		.slide-content {
 			position: absolute;
-			top: 10%;
+			top: 5%;
 			right: 60px;
 			left: 60px;
-			background: white;
-			opacity: .8;
-			padding: 12px;
-			border-radius: 15px;
-			border-top-left-radius: 0;
+			color: white;
 
-			@include respond-to( 768px ) {
-				top: 15%;
-				left: 10%;
-				right: 50%;
-				padding: 25px;
+			@include respond-to( 1024px ) {
+				top: 60px;
+			}
+
+			.wrap {
+				@include respond-to( 768px ) {
+					padding-right: 40%;
+				}
 			}
 		}
 		
 		h1 {
 			font-weight: 700;
 			padding: 0;
-			color: $red-dark;
-
+			color: white;
 			font-size: 18px;
-			@include respond-to( 768px ) { font-size: 22px; }
+			line-height: 1.2em;
+			text-shadow: 0 0 20px rgba( black, .5 );
+			text-transform: uppercase;
+			padding: 3px 0;
+
+			@include respond-to( 600px ) {
+				font-size: 25px; 
+			}
+
+			@include respond-to( 768px ) {
+				margin-bottom: 1%;
+				font-size: 40px; 
+			}
+
+			@include respond-to( 1024px ) {
+				margin-bottom: 2%;
+			}
 		}
 
 		h2 {
 			font-weight: 400;
 			padding: 0;
-			font-size: 13px;
-			line-height: 20px;
+			font-size: 12px;
+			line-height: 1.2em;
+			text-shadow: 0 0 20px rgba( black, .5 );
+			padding: 3px 0;
+
+			@include respond-to( 600px ) {
+				font-size: 15px; 
+			}
+
+			@include respond-to( 768px ) {
+				margin-bottom: 2%;
+				font-size: 20px; 
+			}
+
+			@include respond-to( 1024px ) {
+				margin-bottom: 4%;
+			}
+		}
+
+		.slide-button {
+			padding: 3px 6px;
+			border: 2px solid white;
+			background: transparent;
+			display: inline-block;
+			box-shadow: 0 0 20px rgba( black, .5 );
+			text-shadow: 0 0 20px rgba( black, .5 );
+			transition: 400ms background ease-in-out;
+			margin-top: 3px;
+			text-transform: uppercase;
+
+			@include respond-to( 600px ) {
+				max-width: 70%;
+				padding: 7px 10px;
+				font-size: 15px; 
+			}
+
+			@include respond-to( 768px ) {
+				max-width: 100%;
+				padding: 10px 15px;
+				font-size: 20px; 
+			}
+		}
+		
+		&:hover .slide-button {
+			text-shadow: none;
+			background: $teal;
 		}
 	}
 
