Adjust button styles on mobile so it fills the bottom of the slide.

--- a/css/src/_showcase.scss
+++ b/css/src/_showcase.scss
@@ -46,6 +46,7 @@
 			top: 5%;
 			right: 60px;
 			left: 60px;
+			bottom: 0;
 			color: white;
 			pointer-events: none;
 
@@ -117,25 +118,33 @@
 
 		.slide-button {
 			padding: 3px 6px;
-			border: 2px solid white;
-			background: transparent;
-			display: inline-block;
 			box-shadow: 0 0 20px rgba( black, .5 );
-			text-shadow: 0 0 20px rgba( black, .5 );
 			transition: 400ms background ease-in-out;
 			margin-top: 3px;
 			text-transform: uppercase;
+			background: $teal;
+			position: absolute;	
+			bottom: 0;
+			right: -60px;
+			left: -60px;
+			text-align: center;
 
 			@include respond-to( 600px ) {
 				max-width: 70%;
 				padding: 7px 10px;
 				font-size: 15px; 
+				display: inline-block;
+				position: static;
+				border: 2px solid white;
+				text-shadow: 0 0 20px rgba( black, .5 );
+				background: transparent;
 			}
 
 			@include respond-to( 768px ) {
 				max-width: 100%;
 				padding: 10px 15px;
 				font-size: 20px; 
+				background: transparent;
 			}
 		}
 		
