--- a/css/src/_showcase.scss
+++ b/css/src/_showcase.scss
@@ -157,32 +157,46 @@
 	.showcase-nav a {
 		position: absolute;
 		top: 50%;
-		margin-top: -40px;
 		cursor: pointer;
 		border-radius: 50%;
 		background: $red-dark;
-		width: 80px;
-		height: 80px;
+		width: 50px;
+		height: 50px;
+		margin-top: -25px;
 		text-indent: -300px;
 		overflow: hidden;
 		opacity: .7;
+	
+		@include respond-to( 768px ) {
+			width: 80px;
+			height: 80px;
+			margin-top: -40px;
+		}
 
 		&:hover {
 			opacity: 1;
 		}
 
 		&.previous {
-			left: -30px;
+			left: -5px;
 			background: $red-dark url(../img/slider-arrow-left.png) right center no-repeat;
 			border-top-left-radius: 0;
 			border-bottom-left-radius: 0;
+
+			@include respond-to( 768px ) {
+				left: -30px;
+			}
 		}
 
 		&.next {
-			right: -30px;
+			right: -5px;
 			background: $red-dark url(../img/slider-arrow-right.png) left center no-repeat;
 			border-top-right-radius: 0;
 			border-bottom-right-radius: 0;
+
+			@include respond-to( 768px ) {
+				right: -30px;
+			}
 		}
 	}
 }
