--- a/css/src/_header.scss
+++ b/css/src/_header.scss
@@ -36,7 +36,7 @@ header {
 			border: 0;
 			box-shadow: none;
 			opacity: .7;
-			transition: 500ms background-color ease-in-out, 500ms opacity ease-in-out;
+			transition: 400ms background-color ease-in-out;
 
 			@include respond-to( 400px ) {
 				width: 50px;
@@ -78,7 +78,7 @@ header {
 					color: white;
 					font-size: 10pt;
 					text-transform: uppercase;
-					transition: background-color 500ms ease-in-out;
+					transition: background-color 400ms ease-in-out;
 
 					&:hover {
 						color: white;
@@ -105,19 +105,26 @@ header {
 						position: absolute;
 						top: 44px;
 						left: 0;
-						width: 220px;
+						width: 250px;
 						z-index: 1000;
 					}
 
 					a {
-						@include font;
-						color: darken( $grey, 5% );
-						background: lighten( $grey, 55% );
-						padding: 6px 15px;
+						background-color: lighten( $grey, 50% );
+						display: block;
+						padding: 5px 20px;
+						text-decoration: none;
+						opacity: .85;
+						@include font-medium;
+						font-size: .8em;
+						transition: 400ms background-color ease-in-out, 400ms color ease-in-out, 400ms opacity ease-in-out;
+						color: lighten( $grey, 10% );
+						text-transform: uppercase;
 
 						&:hover {
-							color: $grey;
-							background-color: lighten( $grey, 50% );
+							background-color: lighten( $grey, 57% );
+							color: darken( $grey, 10% );
+							opacity: 1;
 						}
 					}
 				}
@@ -136,7 +143,7 @@ header {
 								display: block;
 
 								a {
-									@include font;
+									@include font-medium;
 
 									&:hover {
 										color: darken( $grey, 3% );
@@ -184,7 +191,7 @@ header {
 			height: 44px;
 			display: block;
 			opacity: .7;
-			transition: 500ms background-color ease-in-out, 500ms opacity ease-in-out;
+			transition: 400ms background-color ease-in-out, 400ms opacity ease-in-out;
 			cursor: pointer;
 
 			@include respond-to( 400px ) {
@@ -208,23 +215,25 @@ header {
 			position: absolute;
 			right: 0;
 			top: 44px;
-			width: 200px;
+			width: 250px;
 
 			li {
 				a {
 					background-color: lighten( $grey, 50% );
 					display: block;
-					padding: 5px 10px;
+					padding: 5px 20px;
 					text-decoration: none;
-					opacity: .95;
+					opacity: .85;
 					@include font-medium;
 					font-size: .8em;
-					transition: 500ms background-color ease-in-out;
-					color: lighten( $grey, 10% );
+					transition: 400ms background-color ease-in-out, 400ms color ease-in-out, 400ms opacity ease-in-out;
+					color: lighten( $grey, 5% );
 					text-transform: uppercase;
 
 					&:hover {
 						background-color: lighten( $grey, 57% );
+						color: darken( $grey, 10% );
+						opacity: 1;
 					}
 				}
 			}
@@ -254,7 +263,7 @@ header {
 		text-indent: 200px;
 		overflow: hidden;
 		opacity: .7;
-		transition: 500ms background-color ease-in-out, 500ms opacity ease-in-out;
+		transition: 400ms background-color ease-in-out, 400ms opacity ease-in-out;
 		
 		@include respond-to( 400px ) {
 			right: 100px;
