Add clearfix to hr.

--- a/css/src/_base.scss
+++ b/css/src/_base.scss
@@ -172,7 +172,7 @@ hr {
   border: 0;
   border-bottom: 1px solid #e5e5e8;
   margin: 25px 0;
-  @include clearfix;
+  clear: both;
 }
 
 blockquote {
