--- a/css/src/_infographic.scss
+++ b/css/src/_infographic.scss
@@ -1,5 +1,10 @@
 
 
+.infographic-title {
+	padding: 30px 20px 20px 20px;
+	text-align: center;
+}
+
 .infographic {
 	padding: 20px 15px;
 	background-position: center center;
