Set header aux menu to have its own container class, and enable page menus on page editors for all sections instead of specific templates.

--- a/css/src/_header.scss
+++ b/css/src/_header.scss
@@ -201,7 +201,7 @@ header {
 			}
 		}
 
-		.menu-footer-navigation-container, .menu-admission-footer-container {
+		.aux-menu {
 			position: static;
 
 			@include respond-to( $menu-breakpoint ) {
