Update 'current-page-item' styles for aux-menu.

--- a/css/src/_header.scss
+++ b/css/src/_header.scss
@@ -229,6 +229,12 @@ header {
 							opacity: 1;
 						}
 					}
+
+					&.current-menu-item > a {
+						color: white;
+						background-color: transparent;
+						opacity: .9;
+					}
 				}
 			}
 		}
