--- a/css/src/_base.scss
+++ b/css/src/_base.scss
@@ -107,7 +107,7 @@ p, h1, h2, h3, h4, h5, h6 {
   }
 }
 
-p.center, h1.center, h2.center, h3.center, h4.center, h5.center, h6.center {
+p.center, h1.center, h2.center, h3.center, h4.center, h5.center, h6.center, p.text-center {
   text-align: center;
 }
 
