Add two-column template with one 3/4 column and another 1/4 column, with the ability to add a wide column of content below the two column template.

--- a/css/src/_content.scss
+++ b/css/src/_content.scss
@@ -76,8 +76,8 @@
 }
 
 .full-width, .content-wide {
-	padding: 20px;
-	@include respond-to( 768px ) { padding: 20px 15px; }
+	@include clearfix;
+	padding: 10px;
 }
 
 @include respond-to( 768px ) {
