--- a/css/src/_content.scss
+++ b/css/src/_content.scss
@@ -30,7 +30,7 @@
 		}
 		
 		&.alignright, &.wp-post-image {
-			margin: 0 -20px 15px 15px;
+			margin: 0 -20px 15px 15px;`
 			float: right;
 
 			@include respond-to( 768px ) {
