--- a/css/src/_area.scss
+++ b/css/src/_area.scss
@@ -87,6 +87,8 @@
 }
 
 .area {
+	padding: 0 0 30px 0;
+
 	.advising {
 		padding-top: 20px;
 	}
@@ -113,13 +115,22 @@
 
 	.tab-nav {
 		ul li {
-			padding: 20px 15px 20px 50px;
+			padding: 20px 15px;
 			font-size: 20px;
 			line-height: 25px;
 			color: lighten( $grey, 20% );
 			cursor: pointer;
 			border-bottom: 1px solid lighten( $grey, 50% );
 			position: relative;
+
+			&.active {
+				background: lighten( $grey, 50% );
+				color: darken( $grey, 30% );
+	
+				&:hover {
+					color: darken( $grey, 30% );
+				}
+			}
 
 			&:before {
 				position: absolute;
@@ -130,58 +141,6 @@
 				text-align: center;
 				font-size: 30px;
 				color: lighten( $grey, 20% );
-			}
-
-			&.area-overview:before {
-				content: $fa-var-info-circle;
-			}
-
-			&.area-faculty:before {
-				content: $fa-var-users;
-			}
-
-			&.area-off_campus:before {
-				content: $fa-var-globe;
-			}
-
-			&.area-tracks:before {
-				content: $fa-var-briefcase;
-			}
-
-			&.area-opportunities:before {
-				content: $fa-var-lightbulb-o;
-			}
-
-			&.area-ensembles:before {
-				content: $fa-var-music;
-			}
-
-			&.area-facilities:before {
-				content: $fa-var-building;
-			}
-
-			&.area-events:before {
-				content: $fa-var-calendar;
-			}
-
-			&.area-productions:before {
-				content: $fa-var-star;
-			}
-
-			&.area-alumni:before {
-				content: $fa-var-user;
-			}
-
-			&.area-success:before {
-				content: $fa-var-mortar-board;
-			}
-
-			&.area-supervisors:before {
-				content: $fa-var-check-square;
-			}
-
-			&.area-teacher:before {
-				content: $fa-var-edit;
 			}
 
 			&:hover {
