--- a/css/src/_area.scss
+++ b/css/src/_area.scss
@@ -92,6 +92,11 @@
 	.advising {
 		padding-top: 20px;
 	}
+	
+	.video {
+		padding-left: 0;
+		padding-right: 20px;
+	}
 
 	.back-to-areas {
 		display: block;
