Add styles for text widgets.

--- a/css/src/_widgets.scss
+++ b/css/src/_widgets.scss
@@ -20,7 +20,7 @@
 
 
 .sidebar {
-	.ripon-widget, .widget_video, .tribe-events-list-widget, .tribe-events-adv-list-widget, .tribe_mini_calendar_widget, .widget_recent_entries, .postmetavideo, .cat-post-widget, .widget_categories {
+	.ripon-widget, .widget_video, .tribe-events-list-widget, .tribe-events-adv-list-widget, .tribe_mini_calendar_widget, .widget_recent_entries, .postmetavideo, .cat-post-widget, .widget_categories, .widget_text {
 		margin-top: 50px;
 		position: relative;
 		padding-top: 25px;
