--- a/css/src/_content.scss
+++ b/css/src/_content.scss
@@ -170,7 +170,7 @@ a.button {
 }
 
 
-.entry-content, .tab-content, .content-narrow, .accordion-content {
+.entry-content, .tab-content, .content-narrow, .accordion-content, .third {
 	ol {
 		padding: 8px 0 12px 40px;
 
