--- a/css/src/_content.scss
+++ b/css/src/_content.scss
@@ -193,7 +193,8 @@ a.button {
 		}
 	}
 
-	.wp-post-image {
+
+	body.single & .wp-post-image {
 		float: right;
 		margin: 0 0 10px 10px;
 		max-width: 50%;
