Add margin below buttons in button menu.

--- a/css/src/_menus.scss
+++ b/css/src/_menus.scss
@@ -82,6 +82,7 @@
 			color: white;
 			border-bottom: none;
 			text-transform: uppercase;
+			margin-bottom: 4px;
 			@include font-bold;
 
 			&:hover {
