--- a/css/src/_base.scss
+++ b/css/src/_base.scss
@@ -205,7 +205,7 @@ ol {
   list-style: decimal;
 }
 
-button, input[type=submit], input[type=reset] {
+button, input[type=submit], input[type=reset], .btn {
   padding: 6px 10px;
   font-family: "Open Sans", sans-serif;
   font-weight: 800;
