--- a/css/src/_alum.scss
+++ b/css/src/_alum.scss
@@ -1,15 +1,25 @@
 
 
+.alum-listing {
+	a {
+		text-decoration: none;
+
+		&:hover .alum .alum-category {
+			opacity: 1;
+		}
+	}
+}
+
 .alum {
 	border: 1px solid #888;
 	background: white;
-	padding: 10px;
+	position: relative;
 
 	@include respond-to( 550px ) {
 		width: 47%;
 		float: left;
 		margin: 0 3% 10px 0;
-		min-height: 375px;
+		min-height: 400px;
 	}
 
 	@include respond-to( 768px ) {
@@ -21,18 +31,94 @@
 		margin: 0 2% 10px 0;
 	}
 
-	& > a {
-		text-decoration: none;
-		color: inherit;
-	}
-
-	h5 {
-		font-weight: bold;
-		color: $red-dark;
-	}
-
 	.info {
 		font-size: .85em;
+		line-height: 1.4em;
+		padding: 10px 10px 50px 10px;
+
+		h5 {
+			line-height: 1.4em;
+			font-weight: 700;
+			color: $red-dark;
+			padding: 0;
+		}
+
+		.quiet {
+			padding: 6px 0;
+		}
+
+		.alum-year {
+			float: left;
+			width: 48%;
+			padding-left: 20px;
+			position: relative;
+			margin: 5px 0 5px 2%;
+
+			&:before {
+				position: absolute;
+				content: $fa-var-calendar;
+				font-family: "FontAwesome";
+				color: $red-dark;
+				left: 0;
+			}
+		}
+
+		.alum-location {
+			float: left;
+			width: 48%;
+			padding-left: 20px;
+			position: relative;
+			margin: 5px 2% 5px 0;
+
+			&:before {
+				position: absolute;
+				content: $fa-var-map-marker;
+				font-family: "FontAwesome";
+				color: $red-dark;
+				left: 0;
+			}
+		}
+	}
+
+	.alum-category {
+		clear: both;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		background: $red-light;
+		color: white;
+		padding: 10px 0 10px 35px;
+		font-weight: 700;
+		margin-top: 5px;
+		opacity: .7;
+		transition: opacity 400ms ease-in-out;
+
+		&:before {
+			position: absolute;
+			font-family: "FontAwesome";
+			color: white;
+			left: 14px;
+			top: 10px;
+		}
+
+		&.alum-category-class-letter:before {
+			content: $fa-var-pencil;
+		}
+
+		&.alum-category-obituary:before {
+			content: $fa-var-info-circle;
+		}
+
+		&.alum-category-news:before {
+			content: $fa-var-newspaper-o;
+			top: 12px;
+			left: 11px;
+		}
+
+		&.alum-category-sightings:before {
+			content: $fa-var-eye;
+		}
 	}
 }
 
@@ -42,13 +128,125 @@
 	background: white;
 	padding: 20px;
 	width: auto;
-	max-width: 500px;
+	max-width: 600px;
 	margin: 40px auto;
 
-	.details-photo {
+	h3 {
+		border-bottom: 1px solid #eee;
+		margin-bottom: 10px;
+	}
+
+	h5 {
+		@include respond-to( 500px ) {
+			float: left;
+			width: 60%;
+			padding: 22px 0 15px 5px;
+		}
+	}
+	
+	@include respond-to( 500px ) {
+		.details-photo {
+			float: left;
+			width: 35%;
+			margin: 0 15px 10px 0;
+		}
+	}
+
+	.alum-year {
 		float: left;
-		width: 40%;
-		margin: 0 15px 15px 0;
+		width: 60%;
+		padding-left: 20px;
+		position: relative;
+		margin: 5px 0;
+
+		@include respond-to( 500px ) {
+			margin: 10px 0;
+			padding-left: 30px;
+		}
+
+		&:before {
+			position: absolute;
+			content: $fa-var-calendar;
+			font-family: "FontAwesome";
+			color: $red-dark;
+			left: 0;
+
+			@include respond-to( 500px ) {
+				left: 5px;
+			}
+		}
+	}
+
+	.alum-location {
+		float: left;
+		width: 60%;
+		padding-left: 20px;
+		position: relative;
+		margin: 5px 0;
+
+		@include respond-to( 500px ) {
+			margin: 10px 0;
+			padding-left: 30px;
+		}
+
+		&:before {
+			position: absolute;
+			content: $fa-var-map-marker;
+			font-family: "FontAwesome";
+			color: $red-dark;
+			left: 4px;
+
+			@include respond-to( 500px ) {
+				left: 9px;
+			}
+		}
+	}
+
+	.alum-category {
+		float: left;
+		width: 60%;
+		padding-left: 20px;
+		position: relative;
+		margin: 5px 0;
+
+		@include respond-to( 500px ) {
+			margin: 10px 0;
+			padding-left: 30px;
+		}
+
+		&:before {
+			position: absolute;
+			font-family: "FontAwesome";
+			color: $red-dark;
+			left: 0;
+
+			@include respond-to( 500px ) {
+				left: 5px;
+			}
+		}
+
+		&.alum-category-class-letter:before {
+			content: $fa-var-pencil;
+		}
+
+		&.alum-category-obituary:before {
+			content: $fa-var-info-circle;
+		}
+
+		&.alum-category-news:before {
+			content: $fa-var-newspaper-o;
+			top: 12px;
+			left: 11px;
+		}
+
+		&.alum-category-sightings:before {
+			content: $fa-var-eye;
+		}
+	}
+
+	.details-content {
+		clear: both;
+		border-top: 1px solid #eee;
 	}
 }
 
@@ -57,21 +255,36 @@
 	border: 1px solid #ccc;
 	background-color: #eee;
 	margin: 0 0 10px 0;
+	clear: both;
 
 	input[type=text], select {
 		font-size: 14px;
 		padding: 7px 12px;
+		display: block;
+		margin-bottom: 10px;
+
+		@include respond-to( 768px ) {
+			display: inline;
+			margin-bottom: 0;
+		}
 	}
 }
 
-.alum-add-story {
-	float: right;
+.alum-title {
+	@include respond-to( 1024px ) {
+		float: left;
+	}
 }
 
-.alum-back {
-	float: right;
-	margin-right: 5px;
-	color: #666;
+.alum-buttons {
+	@include respond-to( 1024px ) {
+		float: right;
+		padding-top: 10px;
+	}
+}
+
+.alum-back, .alum-reset {
+	color: #777;
 }
 
 .alum-add-story-form {
@@ -92,32 +305,136 @@
 	opacity: 1;
 }
 
+.class-title {
+	display: block;
+
+	@include respond-to( 600px ) {
+		display: inline;
+	}
+}
+
 .class-information {
+	clear: both;
 	position: relative;
+	padding: 5px 0 15px;
 
 	.alum-facebook {
 		position: absolute;
-		top: 0;
+		top: 10px;
 		right: 0;
+	}
+
+	.third {
+		padding: 0;
 	}
 
 	@include respond-to( 768px ) {
 		.third {
-			padding-top: 0;
-		}
-
-		.third:first-child {
-			padding-left: 0;
+			padding: 0 20px 0 0;
 		}
 	}
 }
 
 .alum-banner-container {
-	p {
+	position: relative;
+
+	p { 
 		padding: 0;
+	}
+
+	.alum-banner-content {
+		position: absolute;
+		top: 5%;
+		left: 25%;
+		right: 25%;
+		text-align: center;
+
+		@include respond-to( 600px ) {
+			top: 15%;
+		}
+
+		@include respond-to( 960px ) {
+			top: 20%;
+		}
+	}
+
+	h1 {
+		font-weight: 700;
+		padding: 0;
+		font-size: 13px;
+		line-height: 20px;
+		color: white;
+		text-shadow: 0 0 20px rgba( black, .4 );
+		text-transform: uppercase;
+
+		@include respond-to( 600px ) {
+			font-size: 15px;
+			line-height: 18px;
+		}
+
+		@include respond-to( 768px ) {
+			font-size: 26px;
+			line-height: 30px;
+		}
+
+		@include respond-to( 1024px ) {
+			font-size: 38px;
+			line-height: 45px;
+		}
 	}
 
 	img {
 		width: 100%;
+
+		&.alum-banner {
+			display: none;
+		}
+		
+		@include respond-to( 768px ) {
+			&.alum-banner {
+				display: block;
+			}
+
+			&.alum-banner-small {
+				display: none;
+			}
+		}
 	}
+
+	.alum-banner-button {
+		padding: 3px 7px;
+		font-weight: 700;
+		text-transform: uppercase;
+		border: 1px solid white;
+		color: white;
+		font-size: 12px;
+		line-height: 1em;
+		display: inline-block;
+		text-shadow: 0 0 20px rgba( black, .6 );
+
+		@include respond-to( 600px ) {
+			font-size: 15px;
+			padding: 5px 10px;
+		}
+
+		@include respond-to( 768px ) {
+			font-size: 18px;
+			padding: 6px 12px 7px;
+			margin-top: 15px;
+			font-weight: 400;
+		}
+
+		@include respond-to( 1024px ) {
+			font-size: 22px;
+		}
+	}
+
+	a:hover .alum-banner-button {
+		background: $teal;
+	}
+}
+
+
+.alum-title {
+
 }
