--- a/css/src/_alum.scss
+++ b/css/src/_alum.scss
@@ -14,12 +14,13 @@
 	border: 1px solid #888;
 	background: white;
 	position: relative;
+	margin-bottom: 10px;
 
 	@include respond-to( 550px ) {
 		width: 47%;
 		float: left;
 		margin: 0 3% 10px 0;
-		min-height: 400px;
+		min-height: 450px;
 	}
 
 	@include respond-to( 768px ) {
@@ -86,18 +87,19 @@
 		bottom: 0;
 		left: 0;
 		right: 0;
-		background: $red-light;
-		color: white;
+		background: lighten( $grey-light, 5% );
+		color: $grey;
 		padding: 10px 0 10px 35px;
 		font-weight: 700;
 		margin-top: 5px;
 		opacity: .7;
 		transition: opacity 400ms ease-in-out;
+		border-top: 1px solid $grey;
 
 		&:before {
 			position: absolute;
 			font-family: "FontAwesome";
-			color: white;
+			color: $grey;
 			left: 14px;
 			top: 10px;
 		}
