--- a/css/src/_alum.scss
+++ b/css/src/_alum.scss
@@ -14,7 +14,7 @@
 	border: 1px solid #888;
 	background: white;
 	position: relative;
-	margin-bottom: 10px;
+	margin-bottom: 10pxw;
 
 	@include respond-to( 550px ) {
 		width: 47%;
