Add request memory book email link to RConnections template.

--- a/css/src/_alum.scss
+++ b/css/src/_alum.scss
@@ -237,8 +237,6 @@
 
 		&.alum-category-news:before {
 			content: $fa-var-newspaper-o;
-			top: 12px;
-			left: 11px;
 		}
 
 		&.alum-category-sightings:before {
@@ -340,7 +338,7 @@
 
 	.reunion-photo, .class-photo {
 		float: left;
-		width: 60%;
+		width: 90%;
 		padding-left: 40px;
 		position: relative;
 		margin: 15px 0;
@@ -369,7 +367,7 @@
 
 	.class-facebook {
 		float: left;
-		width: 60%;
+		width: 90%;
 		padding-left: 40px;
 		position: relative;
 		margin: 15px 0;
@@ -388,6 +386,35 @@
 		&:before {
 			position: absolute;
 			content: $fa-var-facebook;
+			font-family: "FontAwesome";
+			color: $red-dark;
+			top: 0;
+			left: 4px;
+			font-size: 30px;
+		}
+	}
+
+	.class-memory-book {
+		float: left;
+		width: 90%;
+		padding-left: 40px;
+		position: relative;
+		margin: 15px 0;
+		text-transform: uppercase;
+		font-weight: 700;
+
+		@include respond-to( 768px ) {
+			margin: 25px 0;
+		}
+
+		a {
+			color: $red-dark;
+			text-decoration: none;
+		}
+
+		&:before {
+			position: absolute;
+			content: $fa-var-book;
 			font-family: "FontAwesome";
 			color: $red-dark;
 			top: 0;
