--- a/css/src/_alum.scss
+++ b/css/src/_alum.scss
@@ -32,6 +32,11 @@
 		margin: 0 2% 10px 0;
 	}
 
+	.photo {
+		max-height: 265px;
+		overflow: hidden;		
+	}
+
 	.info {
 		font-size: .85em;
 		line-height: 1.4em;
@@ -63,6 +68,7 @@
 				left: 0;
 			}
 		}
+
 
 		.alum-location {
 			float: left;
