--- a/css/src/_alum.scss
+++ b/css/src/_alum.scss
@@ -428,6 +428,35 @@
 			font-size: 30px;
 		}
 	}
+
+	.class-green-list {
+		float: left;
+		width: 90%;
+		padding-left: 40px;
+		position: relative;
+		margin: 15px 0;
+		text-transform: uppercase;
+		font-weight: 700;
+
+		@include respond-to( 768px ) {
+			margin: 25px 0;
+		}
+
+		a {
+			color: $red-dark;
+			text-decoration: none;
+		}
+
+		&:before {
+			position: absolute;
+			content: $fa-var-bars;
+			font-family: "FontAwesome";
+			color: $red-dark;
+			top: 0;
+			left: 4px;
+			font-size: 30px;
+		}
+	}
 }
 
 .alum-banner-container {
