RConnections: Allow year to be left blank, and fix padding on buttons.

--- a/css/src/_alum.scss
+++ b/css/src/_alum.scss
@@ -283,6 +283,10 @@
 }
 
 .alum-buttons {
+	button {
+		margin: 10px 0;
+	}
+
 	@include respond-to( 1024px ) {
 		float: right;
 		padding-top: 10px;
