--- a/css/src/_fonts.scss
+++ b/css/src/_fonts.scss
@@ -1,6 +1,6 @@
 
 // Google Webfonts
-@import url(//fonts.googleapis.com/css?family=Open+Sans:300italic,600italic,800italic,300,600,800);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300italic,600italic,800italic,300,600,800);
 
 
 // FontAwesome
