Adjust individual faculty layout to move image/bio to the right side.

--- a/css/src/_faculty.scss
+++ b/css/src/_faculty.scss
@@ -250,10 +250,8 @@
 
 
 button.back-to-faculty-list {
-	float: left;
-	position: relative;
-	left: 20px;
-	top: -20px;
+	display: block;
+	width: 100%;
 }
 
 
