--- a/css/src/_menus.scss
+++ b/css/src/_menus.scss
@@ -116,3 +116,14 @@
 
 }
 
+
+/*
+.left-menu {
+	position: relative;
+	top: -100px;
+
+	.menu-primary {
+		border: 1px solid $grey-light;
+	}
+}
+*/
