Don't position the left menu over the grey bar :(

--- a/css/src/_menus.scss
+++ b/css/src/_menus.scss
@@ -118,8 +118,8 @@
 
 
 .left-menu {
-	position: relative;
-	top: -100px;
+	//position: relative;
+	//top: -100px;
 
 	.menu-primary {
 		border: 1px solid $grey-light;
