Restyle the infographic buttons to match the new button design, and repurpose infographic buttons for use as page buttons.

--- a/css/src/_base.scss
+++ b/css/src/_base.scss
@@ -318,6 +318,38 @@ button, input[type=submit], input[type=reset], .btn {
 }
 
 
+
+.bg-teal {
+  background-color: $teal;
+  color: white;
+}
+
+.bg-red-dark {
+  background-color: $red-dark;
+  color: white;
+}
+
+.bg-red-light {
+  background-color: $red-light;
+  color: white;
+}
+
+.bg-blue {
+  background-color: $blue;
+  color: white;
+}
+
+.bg-orange {
+  background-color: $orange;
+  color: black;
+}
+
+.bg-grey {
+  background-color: $grey;
+  color: white;
+}
+
+
 .no-mobile {
   display: none;
 
