--- a/css/src/_infographic.scss
+++ b/css/src/_infographic.scss
@@ -11,18 +11,17 @@
 
 		a.btn {
 			display: block;
-			margin-top: 10px;
 			text-align: left;
 
 			@include respond-to( 550px ) {
 				display: inline-block;
 				width: 30%;
-				margin: 10px 4%;
+				margin: 0 4%;
 			}
 
 			@include respond-to( 768px ) {
 				width: 20%;
-				margin: 10px 1%;
+				margin: 0 1%;
 			}
 		}
 	}
