Highlight the ask a librarian button.

--- a/css/src/_content.scss
+++ b/css/src/_content.scss
@@ -231,3 +231,8 @@ body.single ul.display-posts-listing {
 }
 
 
+li#menu-item-77523 a {
+	background-color: $red-light;
+	border-right-color: $red-light;
+}
+
