--- a/css/src/_tour.scss
+++ b/css/src/_tour.scss
@@ -3,11 +3,9 @@
 .tour {
 	background: url(../img/bg-tour.jpg) center center no-repeat;
 	background-size: cover;
-	text-align: center;
-	padding: 40px 0;
-	vertical-align: top;
-	transition: 1s all ease-in-out;
+	padding: 40px 20px;
 	position: relative;
+	text-align: center;
 
 	.tour-background {
 		display: none;
@@ -23,24 +21,24 @@
 		}
 	}
 
-	@include respond-to( 768px ) {
+	@include respond-to( 900px ) {
 		padding: 100px 0 140px;
 	}
 
 	@include respond-to( 1024px ) {
-		padding: 150px 0 250px;
+		padding: 150px 40px 250px;
 	}
 
 	@include respond-to( 1220px ) {
-		padding: 200px 0 300px;
+		padding: 200px 100px 300px;
 	}
 
 	a.section-close {
+		@include font-bold;
+		font-size: .8em;
 		background: $grey-light;
 		border: 2px solid $grey;
 		color: $grey;
-		@include font-bold;
-		font-size: .8em;
 		text-transform: uppercase;
 		border-radius: 5px;
 		padding: 3px 6px;
@@ -50,12 +48,12 @@
 			position: absolute;
 			bottom: 20px;
 			left: 20px;
-			z-index: 1010;
+			z-index: 510;
 		}
 	}
 	
 	.tour-sections {
-		z-index: 1000;
+		z-index: 500;
 		opacity: 1;
 
 		&.hidden {
@@ -72,16 +70,26 @@
 		display: inline-block;
 		width: 220px;
 		margin: 5px 15px;
-		z-index: 1005;
+		z-index: 505;
 
 		@include respond-to( 500px ) {
 			margin: 15px;
+		}
+
+		@include respond-to( 900px ) {
+			float: left;
+			width: 18%;
+			margin: 15px 1%;
 		}
 
 		&.open {
 			.links {
 				display: block;
 				height: 120px;
+
+				@include respond-to( 900px ) {
+					opacity: 1;
+				}
 			}
 		}
 
@@ -110,6 +118,13 @@
 			border: 2px solid $red-dark;
 			padding: 10px;
 			height: 0;
+			transition: all 500ms ease-in-out;
+
+			@include respond-to( 900px ) {
+				display: block;
+				height: 0;
+				opacity: 0;
+			}
 
 			ul {
 				text-align: left;
@@ -134,10 +149,16 @@
 		padding: 20px;
 		margin: 10px 20px 10px 20px;
 		position: relative;
-		z-index: 1002;
+		z-index: 502;
+		
+		@include respond-to( 900px ) {
+			position: absolute;
+			bottom: 70px;
+			left: 5%;
+			right: 5%;
+		}
 
 		@include respond-to( 1220px ) {
-			position: absolute;
 			bottom: 70px;
 			left: 20%;
 			right: 20%;
@@ -152,7 +173,7 @@
 			right: 0;
 			bottom: 0;
 			left: 0;
-			z-index: 1010;
+			z-index: 510;
 			background: rgba( white, .9 );
 			overflow: auto;
 			padding-top: 15px;
