--- a/css/src/_tour.scss
+++ b/css/src/_tour.scss
@@ -203,11 +203,53 @@
 			}
 
 			.video {
+				position: relative;
 				padding-top: 15px;
 
 				@include respond-to( 768px ) {
 					width: 50%;
 					float: left;
+				}
+
+				.photo {
+					display: none;
+
+					&:first-child {
+						display: block;
+					}
+
+					img {
+						display: block;
+					}
+
+					.photo-caption {
+						clear: both;
+						padding: 5px;
+						font-size: .85em;
+					}
+				}
+
+				.next-photo, .prev-photo {
+					position: absolute;
+					top: 30px;
+					background: rgba( black, .5 );
+					color: white;
+					border: 2px solid rgba( white, .5 );
+					border-radius: 50%;
+					font-size: 34px;
+					width: 40px;
+					height: 40px;
+					padding: 2px;
+					cursor: pointer;
+					text-align: center;
+				}
+
+				.prev-photo {
+					left: 20px;
+				}
+
+				.next-photo {
+					right: 20px;
 				}
 			}
 
