--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -15,6 +15,6 @@ $link-color: $red-light;
 
 
 // import partials
-@import "mixins", "fonts", "base", "colors", "header", "showcase", "events", "infographic", "menus", "content", "search", "widgets", "photos", "phototiles", "tabs", "accordions", "footer", "emergency", "home", "faculty", "news", "jobs", "area", "map", "fund", "alum", "tour", "aux", "lightbox";
+@import "mixins", "fonts", "base", "colors", "header", "showcase", "events", "infographic", "menus", "content", "search", "widgets", "photos", "phototiles", "tabs", "accordions", "footer", "emergency", "home", "faculty", "news", "jobs", "area", "map", "fund", "alum", "tour", "aux", "lightbox", "gravity";
 
 
