Accodion handle text red when open, not just on hover.

--- a/css/src/_accordions.scss
+++ b/css/src/_accordions.scss
@@ -48,8 +48,12 @@ $accordion-arrow-size: 14px;
 		}
 
 		&.open {
-			.accordion-handle:after {
-				content: $fa-var-chevron-down;
+			.accordion-handle {
+				color: $red-light;
+
+				&:after {
+					content: $fa-var-chevron-down;
+				}
 			}
 
 			.accordion-content {
