Adjust light red color to match 'athletics red'.

--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -4,7 +4,7 @@
 $grey: #5f626f;
 $grey-light: #ebeae9;
 $red-dark: #6a0a1b;
-$red-light: #a91c3a;
+$red-light: #be0d34;
 $black: #25252A;
 $blue: #015e83;
 $blue-light: lighten( $blue, 10% );
